fixed spacing in header

--- a/src/styles/landing.css
+++ b/src/styles/landing.css
@@ -43,13 +43,12 @@ h1 {
   text-transform: uppercase;
   font-size: 47px;
   /* margin-left: 38%; */
-  width: 284px;
 }
 
 nav {
   /* margin-top: 54px; */
   /* display: inline; */
-  /* margin-left: 26px; */
+  margin-left: 33px;
   width: 100px;
   height: 22px;
   text-transform: uppercase;
